панель выбора, меню, аватар

--- a/style.css
+++ b/style.css
@@ -1,18 +1,11 @@
 body{
-    background-color: tomato;
+    background-color: #3d2b2c;
 }
 .row {
     display: flex;
 }
-
-.column {
+.column{
     flex: 50%;
-}
-
-.avatar-container{
-    width: 30%;
-    margin-top: 20%;
-    margin-left: 20%;
 }
 
 .categories-list{
@@ -56,11 +49,12 @@ body{
     display: flex;
     flex: 1 0 0%;
     flex-direction: column;
-    margin: 20px;
-    padding: 20px;
+    margin: 10px;
     border-radius: 20px;
-    background-color: rgb(57, 56, 66);
+    background-color: #734344;
     transition: 10ms;
+    align-content: center;
+    width: 100px;
 }
 
 .card:hover{
@@ -103,7 +97,23 @@ body{
 }
 
 .card-img {
-    height: 200px;
+    width: 200px;
+    height: 300px;
+}
+
+.preview {
+    fill: #9c9494;
+}
+
+#portrait-container{
+    width: 80%;
+    height: 800px;
+    align-content: center;
+}
+
+#portrait{
+    width: 100%;
+    height: 100%;
 }
 
 #categories-menu{
