--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: #3d2b2c;
+    background: linear-gradient(to bottom, #43496A, #62F696);
+    height: 100vh;
 }
 .row {
     display: flex;
@@ -42,6 +43,8 @@ body{
     padding: 20px;
     border-radius: 20px;
     background-color: white;
+    max-height: 80vh;
+    overflow: auto;
 }
   
 .card {
@@ -51,10 +54,11 @@ body{
     flex-direction: column;
     margin: 10px;
     border-radius: 20px;
-    background-color: #734344;
-    transition: 10ms;
+    background-color: white;
+    transition: all .1s;
     align-content: center;
     width: 100px;
+    border: 3px dashed #666;
 }
 
 .card:hover{
@@ -79,6 +83,7 @@ body{
     background-color: white;
     transition: 10ms;
     border: 0px;
+    outline: 0;
 }
 
 .card-menu:hover{
@@ -102,10 +107,10 @@ body{
 }
 
 .preview {
-    fill: #9c9494;
+    fill: #aaa;
 }
 .base {
-    fill: #1d3d3d;
+    fill: #666;
 }
 
 .color{
@@ -133,14 +138,13 @@ body{
 }
 
 #portrait-container{
-    width: 80%;
-    height: 800px;
     align-content: center;
 }
 
 #portrait{
     width: 100%;
-    height: 100%;
+    margin-top: 10vh;
+    height: 80vh;
 }
 
 #categories-menu{
