--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
 .card-deck {
     display: flex;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 0;
     border-radius: 20px;
     background-color: white;
     max-height: 80vh;
@@ -65,6 +65,7 @@ body{
     position: relative;
     top: -2px;
     box-shadow: 0 8px 4px 0 rgba(0, 0, 0, 0.25);
+    border: 3px solid #888;
 }
 .card:active {
     position:relative;
@@ -77,13 +78,15 @@ body{
     display: flex;
     flex: 1 0 0%;
     flex-direction: column;
-    margin: 2%;
+    margin: 1%;
     padding: 10px;
     border-radius: 20px;
     background-color: white;
     transition: 10ms;
     border: 0px;
     outline: 0;
+    color: #666;
+    font-size: x-large;
 }
 
 .card-menu:hover{
@@ -98,7 +101,7 @@ body{
 }
 
 .card-menu-img {
-    height: 80px;
+    height: 80%h;
 }
 
 .card-img {
@@ -128,6 +131,14 @@ body{
     cursor: pointer;
 }
 
+.card-menu#random {
+    background: #5e698a;
+    box-shadow: inset 1px 1px 2px #fff;
+}
+
+.card-menu#random > i {
+    color: #fff !important;
+}
 
 #edit-panel{
     width: 50%;
@@ -150,11 +161,32 @@ body{
 #categories-menu{
     background: none;
     padding: 0;
-    padding-left: -20px;
-    padding-right: -20px;
+    /*! padding-left: -20px; */
+    /*! padding-right: -20px; */
 }
 
 #editor-deck{
-    margin-left: 2%;
-    margin-right: 2%;
+    margin: 1% 1% 0 1%;
+    
+}
+
+#side-menu-panel {
+    position: relative;
+}
+
+#side-menu-panel #bottom-buttons {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+#deck-container{
+    margin: 1%;
+    border-radius: 20px;
+    background: white;
+    padding: 20px;
+    max-height: 80vh;
+}
+#download {
+    font-size: xxx-large;
 }
